objects/Employee__c/Employee__c.object-meta.xml
<CustomObject>
    <label>Employee</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Ecode</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>