objects/Employee__c/fields/Social_Page__c.field-meta.xml
<CustomField>
    <fullName>Social_Page__c</fullName>
    <label>Social Page</label>
    <required>true</required>
    <type>Url</type>
</CustomField>