objects/Employee__c/fields/Total_Leaves_Availed__c.field-meta.xml
<CustomField>
    <fullName>Total_Leaves_Availed__c</fullName>
    <label>Total Leaves Availed</label>
    <summarizedField>Leave_Application__c.Number_of_days__c</summarizedField>
    <summaryFilterItems>
        <field>Leave_Application__c.Leave_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Leave_Application__c.Employee__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>