objects/Employee__c/validationRules/Joining_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Joining_date</fullName>
    <active>true</active>
    <errorConditionFormula>Date_of_Joining__c  &gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Date_of_Joining__c</errorDisplayField>
    <errorMessage>Joining date cannot be before creation date.</errorMessage>
</ValidationRule>