objects/Employee__c/validationRules/Total_Leave_Not_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Leave_Not_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>Total_Leaves__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Total_Leaves__c</errorDisplayField>
    <errorMessage>Total leaves cannot be a negative value.</errorMessage>
</ValidationRule>